<resources>
    <string name="app_name">MusicApp</string>
    <string name="welcome_user">welcome_user</string>
    <string name="admin_area">admin_area</string>
    <string name="logout">logout</string>
    <string name="login_welcome">login_welcome</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="preference_file_key">examplePreferenceFileNameMusicApp</string>
    <string name="preference_userId_key">examplePreferenceUserIdKeyMusicApp</string>
    <string name="welcome_to_musically_2_0">Welcome to Musically 2.0</string>
    <string name="sign_up">Sign up</string>
    <string name="logged_in">LOGGED IN</string>
    <string name="options">Options</string>
    <string name="signup_page">SignUp Page</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="signup">SignUp!</string>
    <string name="playlists">playlists</string>
    <string name="search">search</string>
    <string name="random_song">Random Song</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pause">Pause</string>
    <string name="song_title">Song Title</string>
    <string name="songtitle">SongTitle</string>
    <string name="_00_00">00:00</string>
    <string name="_00_00_0">00:00.0</string>
    <string name="songs">Songs</string>
    <string name="_02d_02d">%02d:%02d</string>
    <string name="play">Play</string>
    <string name="pauseButton">Pause</string>
    <string name="skip_next">Skip Next</string>
    <string name="play_pause">Play/Pause</string>
    <string name="skip_previous">Skip Previous</string>
    <string name="home">home</string>
    <string name="set_admin">Set admin</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="admin_commands">Admin Commands</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="prev">prev</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm">Confirm</string>
    <string name="album">Album</string>
    <string name="Play">Play</string>
    <string name="Favorites">Favorites:</string>
    <string name="play2">Play</string>
    <string name="favorites">Favorites</string>

</resources>