<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/albumTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:text="@string/album"
            android:textSize="23sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/Play" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <TextView
        android:id="@+id/favoritesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Favorites"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="start" />

</LinearLayout>
