<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ScreenBackground"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dip"
        android:layout_marginBottom="24dip"
        android:id="@+id/titleLoginTextView"
        android:textSize="42sp"
        android:text="@string/welcome_to_musically_2_0"
        android:gravity="center"
        android:layout_margin="16dip"
        android:textColor="@color/orange"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/userNameLoginEditText"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:hint="@string/username"
        app:layout_constraintTop_toBottomOf="@+id/titleLoginTextView"
        android:layout_margin="16dp"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="Please enter username"
        android:textColorHint="@color/orange"
        android:gravity="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/passwordLoginEditText"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/userNameLoginEditText"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="Please enter password"
        android:textColorHint="@color/orange"
        android:gravity="center"
        android:textSize="24sp" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="87dp"
        android:layout_margin="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/login"
        android:textSize="32sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLoginEditText" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="174dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/sign_up"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />


</androidx.constraintlayout.widget.ConstraintLayout>