<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ScreenBackground"
    tools:context=".AdminActivity">

    <TextView
        android:id="@+id/adminTextView"
        android:layout_width="411dp"
        android:layout_height="95dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/admin_title"
        android:gravity="center"
        android:text="@string/admin_commands"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginTop="12dp"
        android:background="@color/orange"
        android:alpha="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adminTextView" />


    <Button
        android:id="@+id/setAdminCommand"
        android:layout_width="270dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/command_bg"
        android:text="@string/set_admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adminTextView"
        />

    <Button
        android:id="@+id/changeUsername"
        android:layout_width="270dp"
        android:layout_height="80dp"
        android:layout_marginTop="144dp"
        android:background="@drawable/command_bg"
        android:text="@string/change_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adminTextView" />

    <Button
        android:id="@+id/changePassword"
        android:layout_width="270dp"
        android:layout_height="80dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/command_bg"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changeUsername" />


    <Button
        android:id="@+id/home"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/command_bg"
        android:text="@string/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePassword" />


</androidx.constraintlayout.widget.ConstraintLayout>
