<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ScreenBackground"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dip"
        android:layout_marginBottom="24dip"
        android:id="@+id/SignUpTextView"
        android:textSize="42sp"
        android:text="@string/signup_page"
        android:gravity="center"
        android:layout_margin="16dip"
        android:textColor="@color/lavender"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/userNameSignUpEditText"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:hint="@string/enter_username"
        app:layout_constraintTop_toBottomOf="@+id/SignUpTextView"
        android:layout_margin="16dp"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="Please enter username"
        android:textColorHint="@color/orange"
        android:gravity="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/passwordSignUpEditText"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/userNameSignUpEditText"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="Please enter password"
        android:textColorHint="@color/orange"
        android:gravity="center"
        android:textSize="24sp" />


    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="200dp"
        android:layout_height="87dp"
        android:layout_margin="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/signup"
        android:textSize="32sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignUpEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>